--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,12 @@ python = "^3.11"
 cairocffi = "^1.6.1"
 
 
+[tool.poetry.group.dev.dependencies]
+numpy = "^2.0.1"
+pytest = "^8.3.2"
+pillow = "^10.4.0"
+cairosvg = "^2.7.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
