--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ cairocffi = "^1.6.1"
 pytest = "^8.3.2"
 pillow = "^10.4.0"
 cairosvg = "^2.7.1"
+pytest-cov = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
