--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,25 @@
-[tool.poetry]
+[project]
 name = "mysql-visual-explain-cli"
 version = "0.1.0"
 description = ""
-authors = ["Leon Yu <leon@leonyu.net>"]
+authors = [
+    {name = "Leon Yu",email = "leon@leonyu.net"}
+]
 license = "GPL-2.0-only"
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.11"
-cairocffi = "^1.6.1"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.3.2"
-pillow = "^10.4.0"
-cairosvg = "^2.7.1"
-pytest-cov = "^5.0.0"
+requires-python = ">=3.11"
+dependencies = [
+    "cairocffi (>=1.7.1,<2.0.0)",
+]
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "pytest (>=9.0.2,<10.0.0)",
+    "pillow (>=12.0.0,<13.0.0)",
+    "cairosvg (>=2.8.2,<3.0.0)",
+    "pytest-cov (>=7.0.0,<8.0.0)",
+]
